WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285221
Fix text shadow offsets for writing-mode: sideways-lr
https://bugs.webkit.org/show_bug.cgi?id=285221
Summary
Fix text shadow offsets for writing-mode: sideways-lr
fantasai
Reported
2024-12-28 12:46:48 PST
We compensate for text and text decoration shadow offsets when rotating text for vertical writing modes; but for sideways-lr mode, we need to compensate differently since it's a counter-clockwise rotation rather than clockwise.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-28 12:46:57 PST
<
rdar://problem/142128648
>
fantasai
Comment 2
2024-12-30 10:02:37 PST
https://github.com/WebKit/WebKit/pull/38426
EWS
Comment 3
2025-01-02 13:48:44 PST
Committed
288377@main
(319ce4ee3320): <
https://commits.webkit.org/288377@main
> Reviewed commits have been landed. Closing PR #38426 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug