Correctly orient shadow offsets in sideways-lr modes https://bugs.webkit.org/show_bug.cgi?id=285221 rdar://problem/142128648

Reviewed by Alan Baradlay.

Teaches the text and text decoration shadow offset adjustment code
to handle counter-clockwise rotation for sideways-lr.

* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/text-shadow-sideways-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/text-shadow-sideways-001-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/text-shadow-sideways-001.html: Added.
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter::paintForeground):
* Source/WebCore/rendering/TextBoxPainter.h:
(WebCore::TextBoxPainter::rotateShadowOffset):
* Source/WebCore/rendering/TextDecorationPainter.cpp:
(WebCore::convertShadowOffset):
(WebCore::TextDecorationPainter::paintBackgroundDecorations):
* Source/WebCore/rendering/TextPainter.cpp:
(WebCore::ShadowApplier::ShadowApplier):
(WebCore::TextPainter::TextPainter):
(WebCore::TextPainter::paintTextWithShadows):
* Source/WebCore/rendering/TextPainter.h:
(WebCore::TextPainter::setShadowColorFilter):
(WebCore::TextPainter::setIsHorizontal): Deleted.

Canonical link: https://commits.webkit.org/288377@main